# Piha

./: Build.bat  Build.txt  CMakeLists.txt
cmake/: PihaConfig.cmake.in  PihaFindQt.cmake
dependencies/: BuildDependencies.bat  BuildDependencies.txt  GetDependencies.sh
dependencies/I2CDevLib/: CMakeLists.txt
dependencies/I2CDevLib/RaspberryPi/: CMakeLists.txt
dependencies/I2CDevLib/RaspberryPi/MPU6050/Examples/MPU6050_raw/: MPU6050_raw.cpp
dependencies/RPIOPWM/: CMakeLists.txt
include/: PihaAccelerometer.h  PihaAxis.h  PihaBarometer.h  PihaBattery.h  PihaButton.h  PihaCamera.h  PihaComponent.h  PihaConfig.h  PihaConfig.h.in  PihaDevice.h  PihaDeviceProvider.h  PihaGPSReceiver.h  PihaGyroscope.h  PihaImage.h  PihaImageFormat.h  PihaLinuxDevice.h  PihaMagnetometer.h  PihaMemoryBuffer.h  PihaPWM.h  PihaPhidgetProvider.h  PihaProviderDirectInput.h  PihaProviderI2CDevLib.h  PihaProviderRPIOPWM.h  PihaProviderXInput.h  PihaTemperatureSensor.h  PihaTime.h  PihaVector3.h  PihaVibrator.h  PihaWindowsDevice.h
samples/: CMakeLists.txt
samples/PihaExplorer/: CMakeLists.txt  Main.cpp  PihaImageConverter.cpp  PihaImageConverter.h  PihaQComponentTreeItem.cpp  PihaQComponentTreeItem.h  PihaQComponentTreeItemEditorFactory.cpp  PihaQComponentTreeItemEditorFactory.h  PihaQDeviceTreeItem.cpp  PihaQDeviceTreeItem.h  PihaQDeviceTreeWidget.cpp  PihaQDeviceTreeWidget.h  PihaQDeviceUpdater.cpp  PihaQDeviceUpdater.h  PihaQImageWidget.cpp  PihaQImageWidget.h
samples/PihaSimpleTest/: CMakeLists.txt  Main.cpp
src/: PihaAccelerometer.cpp  PihaAxis.cpp  PihaBarometer.cpp  PihaBattery.cpp  PihaButton.cpp  PihaCamera.cpp  PihaComponent.cpp  PihaDevice.cpp  PihaDeviceProvider.cpp  PihaGPSReceiver.cpp  PihaGyroscope.cpp  PihaImage.cpp  PihaImageFormat.cpp  PihaLinuxDevice.cpp  PihaMagnetometer.cpp  PihaMemoryBuffer.cpp  PihaPWM.cpp  PihaProviderDirectInput.cpp  PihaProviderI2CDevLib.cpp  PihaProviderRPIOPWM.cpp  PihaProviderXInput.cpp  PihaTemperatureSensor.cpp  PihaTime.cpp  PihaVibrator.cpp  PihaWindowsDevice.cpp
